--- a/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
+++ b/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
@@ -229,27 +229,34 @@
     <ClInclude Include="..\..\..\agnostic\utility\uninitialized.hpp" />
     <ClInclude Include="..\..\..\agnostic\utility\static_log2.hpp" />
     <ClInclude Include="..\..\..\sonia\array_view.hpp" />
-    <ClInclude Include="..\..\..\sonia\beng\ast.hpp" />
-    <ClInclude Include="..\..\..\sonia\beng\ast\compiler_context.hpp" />
+    <ClInclude Include="..\..\..\sonia\beng\ast\casts\expression_cast_to_object_visitor.hpp" />
+    <ClInclude Include="..\..\..\sonia\beng\ast\casts\expression_cast_to_string_visitor.hpp" />
+    <ClInclude Include="..\..\..\sonia\beng\ast\casts\expression_cast_to_vector_visitor.hpp" />
+    <ClInclude Include="..\..\..\sonia\beng\ast\expression_cast_visitor.hpp" />
+    <ClInclude Include="..\..\..\sonia\beng\ast\expression_fn_visitor.hpp" />
+    <ClInclude Include="..\..\..\sonia\beng\ast_terms.hpp" />
+    <ClInclude Include="..\..\..\sonia\beng\ast\fn_compiler_context.hpp" />
     <ClInclude Include="..\..\..\sonia\beng\ast\declaration_visitor.hpp" />
     <ClInclude Include="..\..\..\sonia\beng\ast\expression_decimal_visitor.hpp" />
     <ClInclude Include="..\..\..\sonia\beng\ast\expression_type_visitor.hpp" />
     <ClInclude Include="..\..\..\sonia\beng\ast\expression_vector_visitor.hpp" />
     <ClInclude Include="..\..\..\sonia\beng\ast\expression_visitor.hpp" />
     <ClInclude Include="..\..\..\sonia\beng\ast\forward_declaration_visitor.hpp" />
-    <ClInclude Include="..\..\..\sonia\beng\ast\terms.hpp" />
     <ClInclude Include="..\..\..\sonia\beng\ast\preliminary_type_visitor.hpp" />
     <ClInclude Include="..\..\..\sonia\beng\beng.hpp" />
     <ClInclude Include="..\..\..\sonia\beng\beng.tab.hpp" />
     <ClInclude Include="..\..\..\sonia\beng\beng.yy.hpp" />
+    <ClInclude Include="..\..\..\sonia\beng\builtins.hpp" />
     <ClInclude Include="..\..\..\sonia\beng\entities\enum_entity.hpp" />
     <ClInclude Include="..\..\..\sonia\beng\entities\functional_entity.hpp" />
     <ClInclude Include="..\..\..\sonia\beng\entities\type_entity.hpp" />
     <ClInclude Include="..\..\..\sonia\beng\entities\variable_entity.hpp" />
     <ClInclude Include="..\..\..\sonia\beng\extern.hpp" />
+    <ClInclude Include="..\..\..\sonia\beng\library\library.hpp" />
     <ClInclude Include="..\..\..\sonia\beng\location.hh" />
     <ClInclude Include="..\..\..\sonia\beng\parser.hpp" />
     <ClInclude Include="..\..\..\sonia\beng\semantic.hpp" />
+    <ClInclude Include="..\..\..\sonia\beng\terms.hpp" />
     <ClInclude Include="..\..\..\sonia\beng\unit.hpp" />
     <ClInclude Include="..\..\..\sonia\beng\vm\beng_vm.hpp" />
     <ClInclude Include="..\..\..\sonia\beng\vm\compiler_visitor.hpp" />
@@ -634,17 +641,18 @@
     <ClInclude Include="..\..\..\sonia\variant.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\sonia\beng\ast\ast.cpp" />
     <ClCompile Include="..\..\..\sonia\beng\ast\declaration_visitor.cpp" />
     <ClCompile Include="..\..\..\sonia\beng\ast\expression_visitor.cpp" />
     <ClCompile Include="..\..\..\sonia\beng\ast\forward_declaration_visitor.cpp" />
     <ClCompile Include="..\..\..\sonia\beng\beng.cpp" />
     <ClCompile Include="..\..\..\sonia\beng\beng.tab.cpp" />
     <ClCompile Include="..\..\..\sonia\beng\beng.yy.cpp" />
+    <ClCompile Include="..\..\..\sonia\beng\beng_semantic.cpp" />
     <ClCompile Include="..\..\..\sonia\beng\beng_unit.cpp" />
     <ClCompile Include="..\..\..\sonia\beng\entities\enum_entity.cpp" />
     <ClCompile Include="..\..\..\sonia\beng\entities\functional_entity.cpp" />
     <ClCompile Include="..\..\..\sonia\beng\entities\type_entity.cpp" />
+    <ClCompile Include="..\..\..\sonia\beng\library\beng_library.cpp" />
     <ClCompile Include="..\..\..\sonia\beng\parser.cpp" />
     <ClCompile Include="..\..\..\sonia\beng\vm\beng_vm.cpp" />
     <ClCompile Include="..\..\..\sonia\fibers\algo\algorithm.cpp">
