--- a/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
+++ b/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
@@ -229,11 +229,16 @@
     <ClInclude Include="..\..\..\agnostic\utility\uninitialized.hpp" />
     <ClInclude Include="..\..\..\agnostic\utility\static_log2.hpp" />
     <ClInclude Include="..\..\..\sonia\array_view.hpp" />
+    <ClInclude Include="..\..\..\sonia\beng\ast\casts\expression_cast_to_array_visitor.hpp" />
+    <ClInclude Include="..\..\..\sonia\beng\ast\casts\expression_cast_to_bool_visitor.hpp" />
+    <ClInclude Include="..\..\..\sonia\beng\ast\casts\expression_cast_to_enum_visitor.hpp" />
+    <ClInclude Include="..\..\..\sonia\beng\ast\casts\expression_cast_to_float_visitor.hpp" />
     <ClInclude Include="..\..\..\sonia\beng\ast\casts\expression_cast_to_object_visitor.hpp" />
     <ClInclude Include="..\..\..\sonia\beng\ast\casts\expression_cast_to_string_visitor.hpp" />
     <ClInclude Include="..\..\..\sonia\beng\ast\casts\expression_cast_to_vector_visitor.hpp" />
-    <ClInclude Include="..\..\..\sonia\beng\ast\expression_cast_visitor.hpp" />
+    <ClInclude Include="..\..\..\sonia\beng\ast\expression_implicit_cast_visitor.hpp" />
     <ClInclude Include="..\..\..\sonia\beng\ast\expression_fn_visitor.hpp" />
+    <ClInclude Include="..\..\..\sonia\beng\ast\lvalue_expression_visitor.hpp" />
     <ClInclude Include="..\..\..\sonia\beng\ast_terms.hpp" />
     <ClInclude Include="..\..\..\sonia\beng\ast\fn_compiler_context.hpp" />
     <ClInclude Include="..\..\..\sonia\beng\ast\declaration_visitor.hpp" />
@@ -251,11 +256,13 @@
     <ClInclude Include="..\..\..\sonia\beng\entities\functional_entity.hpp" />
     <ClInclude Include="..\..\..\sonia\beng\entities\type_entity.hpp" />
     <ClInclude Include="..\..\..\sonia\beng\entities\variable_entity.hpp" />
+    <ClInclude Include="..\..\..\sonia\beng\errors.hpp" />
     <ClInclude Include="..\..\..\sonia\beng\extern.hpp" />
     <ClInclude Include="..\..\..\sonia\beng\library\library.hpp" />
     <ClInclude Include="..\..\..\sonia\beng\location.hh" />
     <ClInclude Include="..\..\..\sonia\beng\parser.hpp" />
     <ClInclude Include="..\..\..\sonia\beng\semantic.hpp" />
+    <ClInclude Include="..\..\..\sonia\beng\semantic_fwd.hpp" />
     <ClInclude Include="..\..\..\sonia\beng\terms.hpp" />
     <ClInclude Include="..\..\..\sonia\beng\unit.hpp" />
     <ClInclude Include="..\..\..\sonia\beng\vm\beng_vm.hpp" />
@@ -644,9 +651,11 @@
     <ClCompile Include="..\..\..\sonia\beng\ast\declaration_visitor.cpp" />
     <ClCompile Include="..\..\..\sonia\beng\ast\expression_visitor.cpp" />
     <ClCompile Include="..\..\..\sonia\beng\ast\forward_declaration_visitor.cpp" />
+    <ClCompile Include="..\..\..\sonia\beng\ast\lvalue_expression_visitor.cpp" />
     <ClCompile Include="..\..\..\sonia\beng\beng.cpp" />
     <ClCompile Include="..\..\..\sonia\beng\beng.tab.cpp" />
     <ClCompile Include="..\..\..\sonia\beng\beng.yy.cpp" />
+    <ClCompile Include="..\..\..\sonia\beng\beng_errors.cpp" />
     <ClCompile Include="..\..\..\sonia\beng\beng_semantic.cpp" />
     <ClCompile Include="..\..\..\sonia\beng\beng_unit.cpp" />
     <ClCompile Include="..\..\..\sonia\beng\entities\enum_entity.cpp" />
